--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ a {
 	color: black;
 }
 .container {
-	max-width: 1320px;
+	max-width: 100vw;
 	padding: 0 12px;
 	margin: 0 auto;
 }
@@ -18,13 +18,44 @@ h1 {
 	font-size: 200px;
 	margin-bottom: 50px;
 }
+@media (max-width:769px){
+	h1 {
+		font-size: 200px;
+		margin-bottom: 25px;
+	}
+}
 
+@media (max-width:769px) {
+	.project-list {
+		text-align: center;
+	}
+}
 .project-link {
 	font-size: 60px;
+}
+@media (max-width:992px) {
+	.project-link {
+		font-size: 50px;
+	}
+}
+@media (max-width:769px){
+	.project-link {
+		font-size: 40px;
+	}
 }
 
 .project-link span {
 	font-size: 80px;
+}
+@media (max-width:992px) {
+	.project-link span {
+		font-size: 70px;
+	}
+}
+@media (max-width:769px) {
+	.project-link span {
+		font-size: 60px;
+	}
 }
 
 .decoration-line {
@@ -33,6 +64,11 @@ h1 {
 	margin-top: 4px;
 	background-color: #000;
 	transition: .25s;
+}
+@media (max-width:769px) {
+	.decoration-line {
+		width: 100%;
+	}
 }
 
 .project-link:hover .decoration-line {
