--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ a {
 	display: inline-block;
 	color: black;
 }
+
 .container {
 	max-width: 100vw;
 	padding: 0 12px;
@@ -15,48 +16,25 @@ a {
 }
 
 h1 {
-	font-size: 200px;
-	margin-bottom: 50px;
+	font-size: clamp(150px, 15vw, 200px);
+	margin-bottom: 5vh;
 }
-@media (max-width:769px){
-	h1 {
-		font-size: 200px;
-		margin-bottom: 25px;
-	}
-}
+
 
 @media (max-width:769px) {
 	.project-list {
 		text-align: center;
 	}
 }
+
 .project-link {
-	font-size: 60px;
-}
-@media (max-width:992px) {
-	.project-link {
-		font-size: 50px;
-	}
-}
-@media (max-width:769px){
-	.project-link {
-		font-size: 40px;
-	}
+	font-size: clamp(35px, 5vw, 60px);
 }
 
 .project-link span {
-	font-size: 80px;
+	font-size: clamp(55px, 7vw, 80px);
 }
-@media (max-width:992px) {
-	.project-link span {
-		font-size: 70px;
-	}
-}
-@media (max-width:769px) {
-	.project-link span {
-		font-size: 60px;
-	}
-}
+
 
 .decoration-line {
 	height: 5px;
@@ -65,6 +43,7 @@ h1 {
 	background-color: #000;
 	transition: .25s;
 }
+
 @media (max-width:769px) {
 	.decoration-line {
 		width: 100%;
