--- a/萬年曆版型測試/style.css
+++ b/萬年曆版型測試/style.css
@@ -1,29 +1,134 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+:root {
+    --white: #FFF;
+    --black: #000;
+    --light-gray: rgb(219, 218, 218);
+    --border-gray: rgb(230, 230, 230);
+    --spring: rgb(58, 211, 19);
+    --spring-lighten: rgb(187, 228, 40);
+    --spring-darken: rgb(13, 158, 61);
+    --summer: rgb(255, 68, 61);
+    --summer-lighten: rgb(255, 141, 96);
+    --summer-darken: rgb(202, 38, 38);
+    --fall: rgb(255, 162, 22);
+    --fall-lighten: rgb(255, 212, 22);
+    --fall-darken: rgb(219, 109, 19);
+    --winter: rgb(0, 170, 255);
+    --winter-lighten: rgb(62, 226, 255);
+    --winter-darken: rgb(0, 102, 255);
+    --holiday-red: red;
+    --line-thin: 5px;
+    --line-normal: 10px
+}
+
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #ccc;
+    background-color: rgb(241, 241, 240);
     font-family: 'Rubik Mono One', sans-serif;
-    ;
+    padding-top: 1vw;
 }
 
-p {
-    margin: 0;
+.spring {
+    background-color: var(--spring);
+}
+
+.summer {
+    background-color: var(--summer);
+}
+
+.fall {
+    background-color: var(--fall);
+}
+
+.winter {
+    background-color: var(--winter);
 }
 
 .container {
-    width: 75%;
-    height: 95vh;
+    width: max(450px, 80vw);
+    max-height: 95vh;
+    aspect-ratio: 4/3;
     padding: 12px;
-    margin: 0 auto;
+    margin-left: 7vw;
     display: grid;
     position: relative;
     grid-template: 0.5fr 5px 0.5fr 10px 10px repeat(6, 1fr) / repeat(7, 1fr);
 }
 
-.container>.item {
-    background-color: #fff;
+.container.spring {
+    border-bottom: var(--line-normal) solid var(--spring-darken);
+    border-right: var(--line-thin) solid var(--spring-darken);
+}
+
+.container.summer {
+    border-bottom: var(--line-normal) solid var(--summer-darken);
+    border-right: var(--line-thin) solid var(--summer-darken);
+}
+
+.container.fall {
+    border-bottom: var(--line-normal) solid var(--fall-darken);
+    border-right: var(--line-thin) solid var(--fall-darken);
+}
+
+.container.winter {
+    border-bottom: var(--line-normal) solid var(--winter-darken);
+    border-right: var(--line-thin) solid var(--winter-darken);
+}
+
+
+.container >.item {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -33,32 +138,43 @@ p {
 
 .container .month {
     grid-area: 1 / 1 / 2 /-1;
-    border-radius: 30px 30px 0 0;
-    color: #fff;
-    padding: 1vh 0 1vh 0;
+    color: var(--white);
+    padding: 1vh 0;
     font-size: 4vw;
-    background-color: #0af;
 }
 
 .decoration-line {
     grid-area: 2 / 1 / 3 /-1;
-    background-color: rgb(31, 132, 226);
+}
+
+.spring .decoration-line {
+    background-color: var(--spring-darken);
+}
+
+.summer .decoration-line {
+    background-color: var(--summer-darken);
+}
+
+.fall .decoration-line {
+    background-color: var(--fall-darken);
+}
+
+.winter .decoration-line {
+    background-color: var(--winter-darken);
 }
 
 .decoration-dash {
     grid-area: 4 / 1 / 5 /-1;
-    background-color: #fff;
-    border-top: 1rem dashed #0af;
+    border-top: 1.2rem dashed var(--white);
 }
 
 .decoration-space {
     grid-area: 5 / 1 / 6 /-1;
-    background-color: #fff;
+    background-color: var(--white);
 }
 
 .container .week {
-    background-color: #0af;
-    color: #fff;
+    color: var(--white);
     padding-top: 10%;
     font-size: 2vw;
 }
@@ -66,13 +182,15 @@ p {
 .container .day {
     justify-content: flex-start;
     align-items: flex-start;
+    position: relative;
     font-size: 2vw;
-    border: 1px solid rgb(230, 230, 230);
+    background-color: var(--white);
+    border: 1px solid var(--border-gray);
     transition: .25s;
 }
 
 .container .day:hover {
-    background-color: rgba(188, 230, 255, 0.849);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .container .day:nth-child(-n+20) {
@@ -80,15 +198,11 @@ p {
 }
 
 .container .day:nth-child(7n+12) {
-    color: red;
+    color: var(--holiday-red);
 }
 
 .container .day:nth-child(7n+13) {
-    color: red;
-}
-
-.container .today {
-    position: relative;
+    color: var(--holiday-red);
 }
 
 .container .item.today::before {
@@ -99,21 +213,28 @@ p {
     width: .8vw;
     height: .8vw;
     border-radius: 100%;
-    background-color: red;
+    background-color: var(--holiday-red);
     transition: .25s;
 }
+
 .container .item:hover.today::before {
     animation: jump .5s linear;
 }
 
 @keyframes jump {
-    20%{
+    20% {
         transform: translateY(-50%);
-    }50%{
+    }
+
+    50% {
         transform: translateY(0);
-    }80%{
+    }
+
+    80% {
         transform: translateY(-50%);
-    }100%{
+    }
+
+    100% {
         transform: translateY(0);
     }
 }
@@ -126,25 +247,22 @@ p {
 
 .container .pre {
     grid-area: 1 / 1 / 2 /2;
-    z-index: 1;
-    text-align: right;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 
 .pre a {
-    content: '';
     width: 2vw;
     height: 2vw;
     border-top: 2vw solid transparent;
     border-bottom: 2vw solid transparent;
-    border-right: 2vw solid #FFF;
+    border-right: 2vw solid var(--white);
 }
 
 .container .next {
     grid-area: 1 / -2 / 2 /-1;
-    text-align: right;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -152,10 +270,165 @@ p {
 }
 
 .next a {
-    content: '';
     width: 2vw;
     height: 2vw;
-    border-left: 2vw solid #FFF;
+    border-left: 2vw solid var(--white);
     border-top: 2vw solid transparent;
     border-bottom: 2vw solid transparent;
+}
+
+.opacity {
+    opacity: 0.5;
+}
+
+.tool {
+    position: absolute;
+    top: 5vw;
+    left: 100%;
+    text-align: center;
+    background-color: transparent;
+}
+
+.tool.spring {
+    border-left: var(--line-thin) solid var(--spring-darken);
+}
+
+.tool.summer {
+    border-left: var(--line-thin) solid var(--summer-darken);
+}
+
+.tool.fall {
+    border-left: var(--line-thin) solid var(--fall-darken);
+}
+
+.tool.winter {
+    border-left: var(--line-thin) solid var(--winter-darken);
+}
+
+.reset {
+    display: block;
+    text-decoration: none;
+    padding: 0.5vw;
+    color: var(--white);
+}
+
+.reset.spring:hover {
+    background-color: var(--spring-lighten);
+}
+
+.reset.summer:hover {
+    background-color: var(--summer-lighten);
+}
+
+.reset.fall:hover {
+    background-color: var(--fall-lighten);
+}
+
+.reset.winter:hover {
+    background-color: var(--winter-lighten);
+}
+
+.reset-title {
+    font-size: 1.5vw;
+}
+
+.reset-date {
+    font-size: max(10px, 2vw);
+}
+
+.opacity {
+    opacity: 0.4;
+}
+
+.day.bottom::after {
+    content: '';
+    width: calc(100% + 2px);
+    height: 5px;
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    left: -1px;
+}
+
+.spring .day.bottom::after {
+    background-color: var(--spring-darken);
+}
+
+.summer .day.bottom::after {
+    background-color: var(--summer-darken);
+}
+
+.fall .day.bottom::after {
+    background-color: var(--fall-darken);
+}
+
+.winter .day.bottom::after {
+    background-color: var(--winter-darken);
+}
+
+form {
+    margin-top: 2vw;
+    font-size: 1.5vw;
+    padding: 1vw 0 0 0;
+    color: var(--white);
+}
+
+input {
+    border: 0;
+    width: 8vw;
+    text-align: center;
+    font-size: 1.2vw;
+    font-weight: 700;
+    margin: .5vw;
+    padding-left:.5vw;
+}
+
+.spring input {
+    color: var(--spring-darken);
+}
+
+.summer input {
+    color: var(--summer-darken);
+}
+
+.fall input {
+    color: var(--fall-darken);
+}
+
+.winter input {
+    color: var(--winter-darken);
+}
+
+input[type="submit"] {
+    margin: 10px 0 0 0;
+    width: 100%;
+    padding: .5vw 0;
+    font-size: 1.5vw;
+    color: var(--white);
+}
+
+.spring input[type="submit"] {
+    background-color: var(--spring);
+}
+
+.summer input[type="submit"] {
+    background-color: var(--summer);
+}
+
+.fall input[type="submit"] {
+    background-color: var(--fall);
+}
+
+.winter input[type="submit"] {
+    background-color: var(--winter);
+}
+
+input[type="submit"]:hover {
+    background-color: var(--white);
+    color: var(--holiday-red);
+}
+
+input:focus {
+    box-shadow: 0;
+    outline: 0;
 }
