--- a/萬年曆版型測試/style.css
+++ b/萬年曆版型測試/style.css
@@ -1,140 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-/* reset END */
 :root {
     --white: #FFF;
     --black: #000;
@@ -183,7 +46,7 @@ body {
 }
 
 .container {
-    width: max(450px, 80vw);
+    width: max(500px, 80vw);
     max-height: 95vh;
     aspect-ratio: 4/3;
     padding: 12px;
@@ -232,25 +95,25 @@ body {
 }
 
 .spring .decoration-line,
-.spring .day.bottom::after,
+.spring .bottom-shadow,
 .spring .box-button {
     background-color: var(--spring-darken);
 }
 
 .summer .decoration-line,
-.summer .day.bottom::after,
+.summer .bottom-shadow,
 .summer .box-button {
     background-color: var(--summer-darken);
 }
 
 .fall .decoration-line,
-.fall .day.bottom::after,
+.fall .bottom-shadow,
 .fall .box-button {
     background-color: var(--fall-darken);
 }
 
 .winter .decoration-line,
-.winter .day.bottom::after,
+.winter .bottom-shadow,
 .winter .box-button {
     background-color: var(--winter-darken);
 }
@@ -275,6 +138,7 @@ body {
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
+    flex-wrap: wrap;
     font-size: 2vw;
     background-color: var(--white);
     border: 1px solid var(--border-gray);
@@ -299,7 +163,7 @@ input:checked+label,
     color: var(--holiday-red);
 }
 
-.container .item.today::before {
+.container .today::before {
     content: '';
     position: absolute;
     top: .8vw;
@@ -311,7 +175,19 @@ input:checked+label,
     transition: .25s;
 }
 
-.container .item:hover.today::before {
+.container .today.opacity::before {
+    content: '';
+    position: absolute;
+    top: .8vw;
+    left: .5vw;
+    width: .8vw;
+    height: .8vw;
+    border-radius: 100%;
+    background-color: var(--holiday-red);
+    opacity: .5;
+}
+
+.container .today:hover::before {
     animation: jump .5s linear;
 }
 
@@ -408,19 +284,27 @@ input:checked+label,
     color: var(--white);
 }
 
-.reset.spring:hover {
+.reset.spring:hover,
+.spring label[for="EN"]:hover::after,
+.spring label[for="CH"]:hover::after {
     background-color: var(--spring-lighten);
 }
 
-.reset.summer:hover {
+.reset.summer:hover,
+.summer label[for="EN"]:hover::after,
+.summer label[for="CH"]:hover::after {
     background-color: var(--summer-lighten);
 }
 
-.reset.fall:hover {
+.reset.fall:hover,
+.fall label[for="EN"]:hover::after,
+.fall label[for="CH"]:hover::after {
     background-color: var(--fall-lighten);
 }
 
-.reset.winter:hover {
+.reset.winter:hover,
+.winter label[for="EN"]:hover::after,
+.winter label[for="CH"]:hover::after {
     background-color: var(--winter-lighten);
 }
 
@@ -434,16 +318,6 @@ input:checked+label,
 
 .opacity {
     opacity: 0.4;
-}
-
-.day.bottom::after {
-    content: '';
-    width: calc(100% + 2px);
-    height: 5px;
-    position: absolute;
-    bottom: -1px;
-    right: -1px;
-    left: -1px;
 }
 
 form {
@@ -483,23 +357,8 @@ input[type="submit"] {
     width: 100%;
     padding: .2vw 0;
     font-size: 1.5vw;
+    background-color: transparent;
     color: var(--white);
-}
-
-.spring input[type="submit"] {
-    background-color: var(--spring);
-}
-
-.summer input[type="submit"] {
-    background-color: var(--summer);
-}
-
-.fall input[type="submit"] {
-    background-color: var(--fall);
-}
-
-.winter input[type="submit"] {
-    background-color: var(--winter);
 }
 
 input[type="submit"]:hover {
@@ -526,13 +385,28 @@ input[type="checkbox"] {
     transform: translateX(-100%);
     transition: .25s;
 }
+
 .switch {
     margin-top: 2vw;
     padding-left: 2vw;
 }
+
 .search {
-    border-top: 2px solid #FFF;
+    border-top: .3vw solid transparent;
     padding-left: 2vw;
+}
+
+.spring .search {
+    border-color: var(--spring-darken);
+}
+.summer .search {
+    border-color: var(--summer-darken);
+}
+.fall .search {
+    border-color: var(--fall-darken);
+}
+.winter .search {
+    border-color: var(--winter-darken);
 }
 
 input[type="checkbox"]:checked+.switch-search {
@@ -549,7 +423,63 @@ input[type="checkbox"]:checked+.switch-search {
 }
 
 label[for="CH"],
-label[for="EN"]{
+label[for="EN"] {
+    padding: .5vw 1vw;
     cursor: pointer;
 }
 
+label[for="CH"]:hover::after,
+label[for="EN"]:hover::after {
+    content: attr(data-tooltip);
+    color: var(--holiday-red);
+    font-size: .8vw;
+    position: absolute;
+    bottom: 90%;
+    left: 2vw;
+    padding: .1vw 0;
+    /* white-space: nowrap; */
+}
+
+label[for="CH"]:hover::before,
+label[for="EN"]:hover::before {
+    content: '';
+    position: absolute;
+    bottom: 88.5%;
+    left: 4vw;
+    border-left: .5vw solid transparent;
+    border-right: .5vw solid transparent;
+}
+
+label[for="EN"]:hover::before {
+    left: 8.5vw;
+}
+
+.spring label[for="CH"]:hover::before,
+.spring label[for="EN"]:hover::before {
+    border-top: .5vw solid var(--spring-lighten);
+}
+
+.summer label[for="CH"]:hover::before,
+.summer label[for="EN"]:hover::before {
+    border-top: .5vw solid var(--summer-lighten);
+}
+
+.fall label[for="CH"]:hover::before,
+.fall label[for="EN"]:hover::before {
+    border-top: .5vw solid var(--fall-lighten);
+}
+
+.winter label[for="CH"]:hover::before,
+.winter label[for="EN"]:hover::before {
+    border-top: .5vw solid var(--winter-lighten);
+}
+
+.holiday-txt,
+.spacial-txt {
+    font-size: 1vw;
+    text-align-last: left;
+}
+
+.bottom-shadow {
+    height: 5px;
+}
