異常修正及樣式調整 異常修正: -修正今日也是特殊節日時節日名稱不會顯示的問題
樣式調整:
-調整today hover動畫的觸發範圍

新增版號及修改日期方便辨識

--- a/萬年曆版型測試/style.css
+++ b/萬年曆版型測試/style.css
@@ -163,7 +163,7 @@ input:checked+label,
     color: var(--holiday-red);
 }
 
-.container .today::before {
+.container .today.thisMonth::before {
     content: '';
     position: absolute;
     top: .8vw;
@@ -175,7 +175,7 @@ input:checked+label,
     transition: .25s;
 }
 
-.container .today.opacity::before {
+.container .today .opacity::before {
     content: '';
     position: absolute;
     top: .8vw;
@@ -187,7 +187,7 @@ input:checked+label,
     opacity: .5;
 }
 
-.container .today:hover::before {
+.container .today.thisMonth:hover::before {
     animation: jump .5s linear;
 }
 
