[新增功能] 新增英文版 新增中英文切換按鈕,並針對英文內容調整CSS

--- a/style/all.css
+++ b/style/all.css
@@ -257,15 +257,27 @@ img {
     position: relative;
     font-size: clamp(16px,5vw,20px);
 }
+[lang="en"] .exp-item-detail-list {
+    position: relative;
+    font-size: clamp(14px,3vw,18px);
+}
+
 .exp-item-detail-list::before {
     content: '';
     display: inline-block;
     position: absolute;
-    top: -1.5rem;
-    bottom: -5rem;
+    top: -2.8rem;
+    bottom: -5.5rem;
     border-left: 1px solid;
     left: -.55vw;
 }
+
+.exp-list :is(li:first-child,li:nth-child(2)) ::before {
+    content: '';
+    top: -1.5rem;
+    bottom: -5rem;
+}
+
 .exp-list {
     width: fit-content;
     padding-bottom: 8rem;
